<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/degradado">

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/but_wifi"
        android:id="@+id/but_wifi"
        android:theme="@style/YourApplicationTheme"
        android:layout_below="@+id/but_localizacion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/but_localizacion"
        android:id="@+id/but_localizacion"
        android:theme="@style/YourApplicationTheme"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/but_wifi"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/acercaDe"
        android:id="@+id/but_acercade"
        style="@style/YourApplicationTheme"
        android:theme="@style/YourApplicationTheme"
        android:layout_below="@+id/bqr"
        android:layout_alignStart="@+id/bqr"
        android:layout_marginTop="33dp" />

    <Button
        style="@style/YourApplicationTheme"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/but_codqr"
        android:id="@+id/bqr"
        android:theme="@style/YourApplicationTheme"
        android:layout_below="@+id/but_wifi"
        android:layout_alignStart="@+id/but_wifi"
        android:layout_marginTop="35dp" />

    <Button
        style="@style/YourApplicationTheme"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/but_valoracion"
        android:id="@+id/but_valoracion"
        android:theme="@style/YourApplicationTheme"
        android:layout_below="@+id/but_acercade"
        android:layout_alignStart="@+id/but_acercade"
        android:layout_marginTop="35dp" />

</RelativeLayout>
